<resources>
    <string name="app_name">Lento</string>

    <string name="title_activity_settings">Settings</string>

    <string name="use_native_toolkit">Use native toolkit</string>
    <string name="hide_anamorphic_switch_title">Hide anamorphic options</string>
    <string name="hide_anamorphic_switch_on">All anamorphic options will be hidden from the main ui</string>
    <string name="hide_anamorphic_switch_off">Anamorphic options will be displayed</string>
    <string name="use_letterbox">Apply 16:9 letterbox</string>
    <string name="letterbox_colour">Letterbox colour</string>
    <string name="use_letterbox_on_summary">Top and bottom bars will be applied to photo</string>
    <string name="use_letterbox_off_summary">No letterbox will be applied</string>
    <string name="use_native_toolkit_summary">Resize images using Toolkit, a standalone native library</string>
    <string name="use_android_method_summary">Resize images using standard Android Bitmap APIs</string>
    <string name="open_chooser_on_launch">Open image chooser on launch</string>
    <string name="horizontal_scale_factor">Horizontal scale factor</string>
    <string name="export">Add to Photos</string>
    <string name="menu">Menu</string>
    <string name="disclaimer_button">I understand</string>
    <string name="disclaimer">Welcome to Lento. This app started life as a specialist camera for use with 3rd party anamorphic lenses and is written by a solo developer. Android camera apps are notorious for being difficult to develop and I only have access to a couple of devices for testing. If Lento doesn\'t work on your device please request a refund immediately</string>
</resources>