<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        app:key="horizontal_scale_factor"
        app:title="@string/horizontal_scale_factor"
        app:defaultValue="1.33"
        app:useSimpleSummaryProvider="true" />

    <SwitchPreferenceCompat
        app:key="use_native_toolkit"
        app:title="@string/use_native_toolkit"
        app:summaryOn="@string/use_native_toolkit_summary"
        app:summaryOff="@string/use_android_method_summary"
        app:defaultValue="true"/>

    <SwitchPreferenceCompat
        app:key="use_letterbox"
        app:title="@string/use_letterbox"
        app:summaryOn="@string/use_letterbox_on_summary"
        app:summaryOff="@string/use_letterbox_off_summary"
        app:defaultValue="false"/>

    <ListPreference
        app:key="letterbox_colour"
        app:dependency="use_letterbox"
        app:title="@string/letterbox_colour"
        app:entries="@array/letterbox_colour_entries"
        app:entryValues="@array/letterbox_colour_values"
        app:defaultValue="black"
        app:summary="%s"
        />


</PreferenceScreen>